# dalvik-darwin

./: CMakeLists.txt  Common.h  DexList.c  Main.c  README.md
ashmem/: ashmem-host.c
bionic/: dlmalloc.c
dexopt/: OptMain.c
include/: AndroidConfig.h  Atomic.h  dalvik_threads.h  jni.h  log.h  logd.h  mspace.h
libcore/: README
libcore/dalvik/src/main/native/: dalvik_system_TouchDex.cpp  org_apache_harmony_dalvik_NativeTestTarget.c
libcore/luni-kernel/src/main/native/: java_lang_ProcessManager.c  java_lang_System.c
libcore/luni/src/main/native/: commonDblParce.c  java_io_File.c  java_io_ObjectInputStream.c  java_io_ObjectOutputStream.c  java_io_ObjectStreamClass.c  java_lang_Character.cpp  java_lang_StrictMath.c  java_net_InetAddress.cpp  java_net_NetworkInterface.c  org_apache_harmony_luni_platform_OSFileSystem.c  org_apache_harmony_luni_platform_OSMemory.c
libcore/odex/: boot_darwin_odex.h
libcore/output/: classes.dex
libcutils/: LogSocket.cpp  adb_networking.c  atomic.c  hashmap.c  mspace.c  process_name.c  properties.c  properties.h  threads.c  threads.h
libdex/: CmdUtils.c  DexCatch.c  DexCatch.h  DexClass.c  DexClass.h  DexDataMap.c  DexDataMap.h  DexFile.c  DexFile.h  DexInlines.c  DexProto.h  DexSwapVerify.c  InstrUtils.h  Leb128.h  OptInvocation.c  SysUtil.c  SysUtil.h  ZipArchive.h
libnativehelper/: JNIHelp.c  Register.c
libnativehelper/include/nativehelper/: AndroidSystemNatives.h  JNIHelp.h
log/: Log.h
safe-iop/: safe_iop.c  safe_iop.h
test/: hello.dex
vm/: AllocTracker.c  Atomic.h  AtomicCache.c  AtomicCache.h  CMakeLists.txt  Common.h  Dalvik.h  DvmDex.c  DvmDex.h  Exception.c  Globals.h  Init.c  InlineNative.c  InlineNative.h  Inlines.c  Inlines.h  Intern.c  JarFile.c  JarFile.h  Jni.c  JniInternal.h  LinearAlloc.c  Makefile  Misc.c  Misc.h  Native.c  Native.h  Profile.c  RamOdexFile.c  RamOdexFile.h  ReferenceTable.c  Sync.c  Thread.c  UtfString.c
vm/alloc/: Alloc.c  DdmHeap.c  Heap.c  HeapBitmap.c  HeapBitmap.h  HeapDebug.c  HeapInternal.h  HeapSource.c  HeapTable.c  MarkSweep.c
vm/analysis/: DexOptimize.c  VerifySubs.c
vm/arch/generic/: Call.c
vm/hprof/: Hprof.h  HprofClass.c
vm/interp/: Interp.c  InterpDefs.h  Stack.c  Stack.h
vm/jdwp/: JdwpMain.c
vm/mterp/: Makefile-mterp-cn  Mterp.c  README_CN.txt
vm/mterp/c/: header.h
vm/native/: dalvik_system_DexFile.c  dalvik_system_VMDebug.c  dalvik_system_VMRuntime.c  dalvik_system_VMStack.c  dalvik_system_Zygote.c  java_lang_Class.c  java_lang_Object.c  java_lang_Runtime.c  java_lang_String.c  java_lang_System.c  java_lang_SystemProperties.c  java_lang_Throwable.c  java_lang_VMClassLoader.c  java_lang_VMThread.c  java_lang_reflect_AccessibleObject.c  java_lang_reflect_Array.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c  java_lang_reflect_Method.c  java_lang_reflect_Proxy.c  java_security_AccessController.c  java_util_concurrent_atomic_AtomicLong.c  org_apache_harmony_dalvik_NativeTestTarget.c  org_apache_harmony_dalvik_ddmc_DdmServer.c  org_apache_harmony_dalvik_ddmc_DdmVmInternal.c  sun_misc_Unsafe.c
vm/oo/: Array.c  Class.c  Class.h  Object.h  Resolve.c
vm/reflect/: Proxy.c  Reflect.c  Reflect.h
